# objsize

./: .gitignore  .hgignore  .hgtags  META  Makefile  README  README.md  _oasis  _tags  c_objsize.c  libobjsize_stubs.clib  myocamlbuild.ml  objsize.ml  objsize.mli  objsize.mllib  objsize.opam  setup.ml  tests.ml  util.h
.github/workflows/: main.yml
src/: c_objsize.c  dune
tests/: dune  tests.ml
