name: "objsize"
opam-version: "2.0"
version: "0.18"
maintainer: "ygrek"
author: "ygrek"
synopsis: "Small library to compute sizes of OCaml heap values"
homepage: "https://github.com/ygrek/objsize"
bug-reports: "https://github.com/ygrek/objsize/issues"
build: [
  ["dune" "build" "@install" "-p" name "-j" job]
  ["dune" "build" "@doc" "-p" name "-j" job] {with-doc}
  ["dune" "runtest" "-p" name "-j" job] {with-test}
]
depends: [
  "ocaml" { >= "4.03" }
  "dune" { >= "2.0" }
  "odoc" {with-doc}
]
